--- a/css/style.css
+++ b/css/style.css
@@ -170,8 +170,11 @@ nav .active a {
     text-align: center;
   }
   .profile-button {
+    display: grid;
+    grid-gap: 5%;
+    grid-template-columns: auto;
     margin-top:0;
-    margin-bottom: 5%;
+    margin-bottom: 10%;
     margin-left: 5%;
     /* background-color: #faf5f3; */
     padding: 20px;
@@ -184,6 +187,134 @@ nav .active a {
     padding-bottom: 5%;
     font-size: 1.6em;
     font-weight: bold;
+  }
+
+  /* Buttons */
+  .button {
+    padding: 10px 15px;
+    margin: 3%;
+    border: none;
+    border-radius: 30px;
+    cursor: pointer;
+    font-size: 1.1em;
+    transition: background-color 0.3s ease;
+  }
+  
+  .button-blue {
+    grid-row: 2;
+    background-color: rgb(12, 86, 69);
+    color: white;
+  }
+  
+  .button-blue:hover {
+    background-color: #170327b2;
+  }
+  
+  .button-light {
+    grid-row: 3;
+    /* background-color: #b5d7e1; */
+    background-color: #dbc9da;
+    color: #170327b2;
+    border: 1px solid #170327b2;
+  }
+  
+  .button-light:hover {
+    background-color: rgba(64, 112, 102, 0.968);
+    color:white;
+  }
+
+  /* Style for clickable cat name */
+  .clickable {
+    color: rgb(12, 86, 69);
+    cursor: pointer;
+    text-decoration: underline;
+    font-weight: bold;
+  }
+
+
+  .modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+  }
+  
+  /* Modal Content */
+  .modal-content {
+    background-color: #fefefe;
+    margin: 2% auto; /* Increased top margin, auto margin for horizontal */
+    padding: 20px;
+    border: 1px solid #888;
+    width: 50%; /* Smaller width */
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2), 0 6px 20px 0 rgba(0,0,0,0.19); /* Optional */
+}
+  
+.cat-slides {
+  width: 100%; /* Adjust width as necessary */
+  height: auto; /* Adjust height as necessary */
+  display: block; /* Ensures that the image is block level */
+}
+  
+  /* Previous and next buttons */
+  .prev, .next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -50px;
+    color: white;
+    font-weight: bold;
+    font-size: 20px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+  }
+  .next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+  }
+  
+  /* Position the "prev button" to the left */
+  .prev {
+    left: 0;
+  }
+
+  .prev:hover, .next:hover {
+    background-color: rgba(0,0,0,0.8);
+  }
+  
+  /* The Close Button */
+  .close {
+    color: white;
+    cursor: pointer;
+    position: absolute;
+    top: 10px;
+    right: 25px;
+    font-size: 100px;
+    font-weight: bold;
+  }
+  
+  .close:hover,
+  .close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+  }
+  
+  /* Add some style to the image if needed */
+  #cat-pic {
+    max-width: 100%;
+    height: auto;
+    display: block;
+    margin: 0 auto; /* Center the image within the modal */
   }
 
 /* main content for desktop */
@@ -259,6 +390,8 @@ nav .active a {
     margin-left: 5%;
     }
     .profile-button {
+    grid-template-columns: auto auto;
+    justify-content: center;
     margin-top:0;
     margin-bottom: 5%;
     margin-left: 5%;
@@ -270,24 +403,19 @@ nav .active a {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     }
     .profile-button h2 {
+      grid-column: 1 / span 2;
     padding-bottom: 5%;
     font-size: 1.6em;
     font-weight: bold;
     }
-}
 
-  /* Buttons */
-  .button {
-    padding: 10px 15px;
-    margin: 3%;
-    border: none;
-    border-radius: 30px;
-    cursor: pointer;
-    font-size: 1.1em;
-    transition: background-color 0.3s ease;
-  }
-  
+     /* Buttons */
+    .button {
+      width: 130px;
+    }
   .button-blue {
+    
+    grid-column: 1;
     background-color: rgb(12, 86, 69);
     color: white;
   }
@@ -297,6 +425,8 @@ nav .active a {
   }
   
   .button-light {
+    grid-row: 2;
+    grid-column: 2;
     /* background-color: #b5d7e1; */
     background-color: #dbc9da;
     color: #170327b2;
@@ -309,6 +439,9 @@ nav .active a {
   }
   
 
+}
+
+ 
 /* footer */
 footer {
     font-family: 'Courier New', Courier, monospace;
