--- a/css/style.css
+++ b/css/style.css
@@ -708,6 +708,10 @@ footer {
   font-size: 1em;
   width: 100%;
   font-weight: bold;
+  background-color: #b5d7e1;
+  padding: 10px 0;  /* Add padding for better visual spacing */
+  box-shadow: 0px 4px 8px rgba(0, 0, 0, 0.1);  /* Subtle shadow for depth */
+  border-radius: 10px;
 }
 .timeline-item .timeline-header-3 {
   grid-row: 1;
@@ -715,6 +719,10 @@ footer {
   font-size: 1em;
   width: 100%;
   font-weight: bold;
+  background-color: #ceb8cd;
+  padding: 10px 0;  /* Add padding for better visual spacing */
+  box-shadow: 0px 4px 8px rgba(0,0,0, 0.1);  /* Subtle shadow for depth */
+  border-radius: 10px;
 }
 .timeline-item .timeline-content-1 {
   grid-row: 3;
@@ -725,6 +733,21 @@ footer {
   grid-row: 3;
   text-align: center;
   font-size: 0.8em;
+}
+
+.video-icon video {
+  width: 100px; /* Adjust width as needed */
+  height: auto; /* Maintain aspect ratio */
+  border: 2px solid #b5d7e1;
+  border-radius: 50%; /* Make it circular if that's desired */
+  object-fit: cover; /* Ensure the video covers the area without being stretched */
+  cursor: pointer; /* Indicate it's clickable */
+}
+
+.video-icon {
+  display: flex;
+  justify-content: center; /* Center horizontally in the parent */
+  align-items: center; /* Center vertically */
 }
 
 /* Resume page for desktop */
@@ -928,8 +951,6 @@ footer {
     width: 40%;
     height:100%;
     margin-left: 80%;
-    background: #fff;
-    border-radius: 50%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -996,9 +1017,9 @@ footer {
   .timeline-item .timeline-header-3 {
     grid-column: 3/4;
     grid-row: 1;
-    margin-left: 5%;
+    margin-left: 25%;
     font-size: 1.2em;
-    width: 100%;
+    width: 50%;
   }
   .timeline-item .timeline-content-1 {
     grid-column: 3/4;
@@ -1013,7 +1034,17 @@ footer {
     width: 100%;
     font-size: 1em;
   }
-  
+  .video-icon {
+    grid-row:2;
+    grid-column: 2/3;
+    margin-left: 100%;
+    text-align: center;
+    z-index: 2;
+  }
+  .video-icon video {
+    width: 150px;
+    cursor: pointer;
+  }
 }
 
 
