--- a/css/style.css
+++ b/css/style.css
@@ -1186,13 +1186,54 @@ footer {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  color: #fff; /* Text color */
+  color: #fff; 
   text-align: center;
   padding: 20px;
   border-radius: 10px;
-  background-color: rgba(0, 0, 0, 0.6); /* Semi-transparent black background */
-  backdrop-filter: blur(5px); /* Optional: Apply a blur effect to the background */
-  max-width: 80%; /* Maximum width of the text box */
+  background-color: rgb(12, 86, 69); 
+  backdrop-filter: blur(5px); 
+  max-width: 80%;
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.3), 
+              0 8px 20px rgba(0, 0, 0, 0.2), 
+              0 16px 40px rgba(0, 0, 0, 0.1);
+  transition: transform 0.3s, box-shadow 0.3s;
+  perspective: 1500px; 
+}
+
+.header-text-box h1 {
+  font-size: 1.5em;
+  margin-bottom: 0.5em;
+  transition: transform 0.3s;
+  transform: translateZ(120px); /* Pulls the title towards the viewer */
+  opacity: 0.85;
+}
+
+.header-text-box p {
+  font-size: 1em;
+  transition: transform 0.3s;
+  transform: translateZ(60px); /* Pulls the paragraph text towards the viewer */
+  opacity: 0.85;
+}
+
+.header-text-box:hover h1,
+.header-text-box:hover p {
+  transform: translateZ(0); /* Flattens the text on hover for an interactive effect */
+  opacity: 1;
+}
+
+.header-text-box:before {
+  content: '';
+  position: absolute;
+  top: -5px; right: -5px; bottom: -5px; left: -5px;
+  background: linear-gradient(45deg, rgba(255, 255, 255, 0.1), rgba(0, 0, 0, 0.1));
+  border-radius: inherit;
+  z-index: -1;
+  transition: opacity 0.3s, transform 0.3s;
+  transform: translateZ(-20px); /* Pushes the gradient background back */
+}
+
+.header-text-box:hover:before {
+  opacity: 0;
 }
 
 
@@ -1239,18 +1280,21 @@ footer {
 /* Project page for desktop */
 @media screen and (min-width: 750px) {
   .video-header {
-    height: 70vh;
+    height: 50vh;
   }
   
   .background-video {
-    top: 20%;
+    top: 40%;
     width: 100%;
-    height: 80%;
+    height: 100%;
   }
-  
-  .header-text-box {
-    max-width: 50%;
-    top:20%;
+
+  .header-text-box h1 {
+    font-size: 2.5em;
+  }
+
+  .header-text-box p {
+    font-size: 1.5em;
   }
   
   .project-cards-container {
